--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -837,29 +837,29 @@
                 <div class='section_content_body--center'>
                     <div class="background"></div>
                     <div class='class="content__welcome-section_1_2'>
-                        <div class='section_content_card --padding_40px layer-scale'>
+                        <div data-id="0" class='section_content_card --item-0--padding_40px layer-scale'>
                             <div class='section_content_card_top'>
-                                <div class='logo__section_content_1_2'>
+                                <div class='logo__section_content_1_2 image-description--image-0'>
                                     <div class='section_content_img'>
-<!--                                        <img src="./this/img/sections/1/icons/00.png"/>-->
+                                        <img src="./this/img/sections/1/icons/00.png"/>
                                     </div>
                                     <div class='section_content_text'>
                                         ФМБА <br>России
                                     </div>
                                 </div>
                             </div>
-<!--                            <div style="display: flex" class='section_content_card_bottom'>-->
-<!--                                В части автоматизации крупнейшей сети государственных клиник ФМБА России Цифромед отвечает за разработку, развитие и поддержку централизованной облачной платформы ЕВМИАС.-->
-<!--                                Платформа позволяет цифровизовать следующие процессы:-->
-<!--                                Управление оказанием медицинской помощи-->
-<!--                                Ведение базы данных и электронных карт-->
-<!--                                Запись к врачу, по направлению, на вакцинацию и иные сервисы на ЕПГУ-->
-<!--                                Взаимодействие с федеральными информационными системами-->
-<!--                            </div>-->
+                            <div style="display: flex" class='section_content_card_bottom data-description'>
+                                В части автоматизации крупнейшей сети государственных клиник ФМБА России Цифромед отвечает за разработку, развитие и поддержку централизованной облачной платформы ЕВМИАС.
+                                Платформа позволяет цифровизовать следующие процессы:
+                                Управление оказанием медицинской помощи
+                                Ведение базы данных и электронных карт
+                                Запись к врачу, по направлению, на вакцинацию и иные сервисы на ЕПГУ
+                                Взаимодействие с федеральными информационными системами
+                            </div>
                         </div>
-                        <div class='section_content_card --padding_40px'>
+                        <div data-id="1" class='section_content_card --padding_40px--item-1'>
                             <div class='section_content_card_top'>
-                                <div class='logo__section_content_1_2'>
+                                <div class='logo__section_content_1_2 image-description--image-1'>
                                     <div class='section_content_card_top section_2_height'>
                                         <img src="./this/img/sections/1/icons/01.png"/>
                                     </div>
@@ -869,13 +869,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom'>
+                            <div style="display: none" class='section_content_card_bottom data-description'>
                                 Автоматизацией крупнейшей сети государственных клиник ФМБА России
                             </div>
                         </div>
-                        <div class='section_content_card --padding_40px'>
+                        <div data-id="2" class='section_content_card --padding_40px--item-2'>
                             <div class='section_content_card_top'>
-                                <div class='logo__section_content_1_2'>
+                                <div class='logo__section_content_1_2 image-description--image-2'>
                                     <div class='section_content_card_top section_2_height'>
                                         <img src="./this/img/sections/1/icons/04.svg"/>
                                     </div>
@@ -884,25 +884,25 @@
                                     </div>
                                 </div>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom'>
+                            <div style="display: none" class='section_content_card_bottom data-description'>
                                 Автоматизацией крупнейшей сети государственных клиник ФМБА России
                             </div>
                         </div>
 
-                        <div class='section_content_card --padding_40px'>
-                            <div class='section_content_card_top'>
-                                <img class="--border-radius_10px" src="./this/img/sections/1/icons/02.svg"/>
+                        <div data-id="3" class='section_content_card --padding_40px--item-3'>
+                            <div class='section_content_card_top image-description--image-3'>
+                                <img class="--border-radius_10px" src="./this/img/sections/1/icons/05.svg"/>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom'>
+                            <div style="display: none" class='section_content_card_bottom data-description'>
                                 Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России
                             </div>
                         </div>
 
-                        <div class='section_content_card --padding_40px'>
-                            <div class='section_content_card_top_3'>
+                        <div data-id="4" class='section_content_card --padding_40px--item-4'>
+                            <div class='section_content_card_top_3 image-description--image-4'>
                                 <p class='section_content_card_top_logo_3'>ЕЦК</p>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom'>
+                            <div style="display: none" class='section_content_card_bottom data-description'>
                                 Развитием Единого цифрового контура на базе продуктов дочерних копаний
                             </div>
                         </div>
