--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -839,7 +839,7 @@
                     <div class='class="content__welcome-section_1_2'>
                         <div data-id="0" class='section_content_card --item-0--padding_40px layer-scale'>
                             <div class='section_content_card_top'>
-                                <div class='logo__section_content_1_2 image-description--image-0'>
+                                <div data-id="0" class='logo__section_content_1_2 image-description--image-0'>
                                     <div class='section_content_img'>
                                         <img src="./this/img/sections/1/icons/00.png"/>
                                     </div>
@@ -848,7 +848,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div style="display: flex" class='section_content_card_bottom data-description'>
+
+                            <div data-id="0" style="display: flex" class='section_content_card_bottom data-description--opacity_0--translateY_0--width_0--height_0--left_0'>
                                 В части автоматизации крупнейшей сети государственных клиник ФМБА России Цифромед отвечает за разработку, развитие и поддержку централизованной облачной платформы ЕВМИАС.
                                 Платформа позволяет цифровизовать следующие процессы:
                                 Управление оказанием медицинской помощи
@@ -859,7 +860,7 @@
                         </div>
                         <div data-id="1" class='section_content_card --padding_40px--item-1'>
                             <div class='section_content_card_top'>
-                                <div class='logo__section_content_1_2 image-description--image-1'>
+                                <div data-id="1" class='logo__section_content_1_2 image-description--image-1'>
                                     <div class='section_content_card_top section_2_height'>
                                         <img src="./this/img/sections/1/icons/01.png"/>
                                     </div>
@@ -869,13 +870,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom data-description'>
+                            <div data-id="1" style="display: none" class='section_content_card_bottom data-description--opacity_1--translateY_1--width_1--height_1--left_1'>
                                 Автоматизацией крупнейшей сети государственных клиник ФМБА России
                             </div>
                         </div>
                         <div data-id="2" class='section_content_card --padding_40px--item-2'>
                             <div class='section_content_card_top'>
-                                <div class='logo__section_content_1_2 image-description--image-2'>
+                                <div data-id="2" class='logo__section_content_1_2 image-description--image-2'>
                                     <div class='section_content_card_top section_2_height'>
                                         <img src="./this/img/sections/1/icons/04.svg"/>
                                     </div>
@@ -884,25 +885,25 @@
                                     </div>
                                 </div>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom data-description'>
+                            <div data-id="2" style="display: none" class='section_content_card_bottom data-description--opacity_2--translateY_2--width_2--height_2--left_2'>
                                 Автоматизацией крупнейшей сети государственных клиник ФМБА России
                             </div>
                         </div>
 
                         <div data-id="3" class='section_content_card --padding_40px--item-3'>
-                            <div class='section_content_card_top image-description--image-3'>
+                            <div data-id="3" class='section_content_card_top image-description--image-3'>
                                 <img class="--border-radius_10px" src="./this/img/sections/1/icons/05.svg"/>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom data-description'>
+                            <div data-id="3" style="display: none" class='section_content_card_bottom data-description--opacity_3--translateY_3--width_3--height_3--left_3'>
                                 Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России
                             </div>
                         </div>
 
                         <div data-id="4" class='section_content_card --padding_40px--item-4'>
-                            <div class='section_content_card_top_3 image-description--image-4'>
+                            <div data-id="4" class='section_content_card_top_3 image-description--image-4'>
                                 <p class='section_content_card_top_logo_3'>ЕЦК</p>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom data-description'>
+                            <div data-id="4" style="display: none" class='section_content_card_bottom data-description--opacity_4--translateY_4--width_4--height_4--left_4'>
                                 Развитием Единого цифрового контура на базе продуктов дочерних копаний
                             </div>
                         </div>
