--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -837,7 +837,7 @@
                 <div class='section_content_body--center'>
                     <div class="background"></div>
                     <div class='class="content__welcome-section_1_2'>
-                        <div data-id="0" class='section_content_card --item-0--padding_40px layer-scale'>
+                        <div data-id="0" class='section_content_card --item-0--padding_40px--height_0 layer-scale'>
                             <div class='section_content_card_top'>
                                 <div data-id="0" class='logo__section_content_1_2 image-description--image-0'>
                                     <div class='section_content_img'>
@@ -849,16 +849,33 @@
                                 </div>
                             </div>
 
-                            <div data-id="0" style="display: flex" class='section_content_card_bottom data-description--opacity_0--translateY_0--width_0--height_0--left_0'>
-                                В части автоматизации крупнейшей сети государственных клиник ФМБА России Цифромед отвечает за разработку, развитие и поддержку централизованной облачной платформы ЕВМИАС.
-                                Платформа позволяет цифровизовать следующие процессы:
-                                Управление оказанием медицинской помощи
-                                Ведение базы данных и электронных карт
-                                Запись к врачу, по направлению, на вакцинацию и иные сервисы на ЕПГУ
-                                Взаимодействие с федеральными информационными системами
+                            <div data-id="0" class='section_content_card_bottom data-description--opacity_0--translateY_0--width_0--height_0--left_0--top_0'>
+                               <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                   В части автоматизации крупнейшей сети государственных <br>
+                                   клиник ФМБА России Цифромед отвечает за разработку,<br>
+                                   развитие и поддержку централизованной облачной<br>
+                                   платформы ЕВМИАС.
+                               </p>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Платформа позволяет цифровизовать следующие процессы:
+                                </p>
+                                <ul class="ul-description-section-content_1_2">
+                                    <li class="li-description-section-content_1_2">
+                                        Управление оказанием медицинской помощи
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Ведение базы данных и электронных карт
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Запись к врачу, по направлению, на вакцинацию и иные сервисы на ЕПГУ
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Взаимодействие с федеральными информационными системами
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <div data-id="1" class='section_content_card --padding_40px--item-1'>
+                        <div data-id="1" class='section_content_card --padding_40px--item-1--height_1'>
                             <div class='section_content_card_top'>
                                 <div data-id="1" class='logo__section_content_1_2 image-description--image-1'>
                                     <div class='section_content_card_top section_2_height'>
@@ -870,11 +887,29 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-id="1" style="display: none" class='section_content_card_bottom data-description--opacity_1--translateY_1--width_1--height_1--left_1'>
-                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
+                            <div data-id="1"  class='section_content_card_bottom data-description--opacity_1--translateY_1--width_1--height_1--left_1--top_1'>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Для фонда компания занимается созданием и развитием <br>
+                                    подсистем и компонентов ГИС ОМС. На их базе для<br>
+                                    населения обеспечивается доступ к следующим сервисам<br>
+                                    на ЕПГУ:
+                                </p>
+                                <ul class="ul-description-section-content_1_2">
+                                    <li class="li-description-section-content_1_2">
+                                        Персональный цифровой медицинский полис ОМС
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Обеспечение получения гражданами разрешений,<br>
+                                        допусков и справок медицинского характера
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Прикрепление к поликлиникам и страховым<br>
+                                        организациям
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <div data-id="2" class='section_content_card --padding_40px--item-2'>
+                        <div data-id="2" class='section_content_card --padding_40px--item-2--height_2'>
                             <div class='section_content_card_top'>
                                 <div data-id="2" class='logo__section_content_1_2 image-description--image-2'>
                                     <div class='section_content_card_top section_2_height'>
@@ -885,26 +920,105 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-id="2" style="display: none" class='section_content_card_bottom data-description--opacity_2--translateY_2--width_2--height_2--left_2'>
-                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
+                            <div data-id="2" class='section_content_card_bottom data-description--opacity_2--translateY_2--width_2--height_2--left_2--top_2'>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Для Министерства здравоохранения Российской Федерации<br>
+                                    Цифромед развивает архитектуру и технологии подсистем<br>
+                                    ЕГИСЗ. В настоящее время компания обслуживает 14<br>
+                                    федеральных компонентов ЕГИСЗ. Среди наиболее важных<br>
+                                    задачах, решаемых с помощью информационной системы<br>
+                                    можно выделить:
+                                </p>
+                                <ul class="ul-description-section-content_1_2--margin-bottom_30px">
+                                    <li class="li-description-section-content_1_2">
+                                        Обеспечение доступа граждан к услугам в сфере <br>
+                                        здравоохранения в электронной форме
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Информационная поддержка деятельности<br>
+                                        медицинских организаций
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Создание единой информационной среды для <br>
+                                        оператора, поставщиков и пользователей данных
+                                    </li>
+                                </ul>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Кроме этого в ЕГИСЗ ведется учет медицинских организаций<br>
+                                    и медработников, лекарственных препаратов и других <br>
+                                    необходимых для системы здравоохранения показателей.
+                                </p>
                             </div>
                         </div>
 
-                        <div data-id="3" class='section_content_card --padding_40px--item-3'>
+                        <div data-id="3" class='section_content_card --padding_40px--item-3--height_3'>
                             <div data-id="3" class='section_content_card_top image-description--image-3'>
                                 <img class="--border-radius_10px" src="./this/img/sections/1/icons/05.svg"/>
                             </div>
-                            <div data-id="3" style="display: none" class='section_content_card_bottom data-description--opacity_3--translateY_3--width_3--height_3--left_3'>
-                                Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России
+                            <div data-id="3"  class='section_content_card_bottom data-description--opacity_3--translateY_3--width_3--height_3--left_3--top_3'>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Цифромед занимается созданием и развитием медицинских <br>
+                                    сервисов на ЕПГУ совместно с Минцифры России. Благодаря<br>
+                                    совместной работе, на портале доступен сервис «Здоровье»<br>
+                                    с ключевыми услугами для населения.
+                                </p>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Например, Цифромед технически поддерживает такие<br>
+                                    сервисы:
+                                </p>
+                                <ul class="ul-description-section-content_1_2">
+                                    <li class="li-description-section-content_1_2">
+                                        Запись к врачу
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Вызов врача на дом
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Суперсервис «Рождение ребенка»
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        Получение медицинских документов онлайн
+                                    </li>
+                                </ul>
                             </div>
                         </div>
 
-                        <div data-id="4" class='section_content_card --padding_40px--item-4'>
+                        <div data-id="4" class='section_content_card --padding_40px--item-4--height_4'>
                             <div data-id="4" class='section_content_card_top_3 image-description--image-4'>
                                 <p class='section_content_card_top_logo_3'>ЕЦК</p>
                             </div>
-                            <div data-id="4" style="display: none" class='section_content_card_bottom data-description--opacity_4--translateY_4--width_4--height_4--left_4'>
-                                Развитием Единого цифрового контура на базе продуктов дочерних копаний
+                            <div data-id="4" class='section_content_card_bottom data-description--opacity_4--translateY_4--width_4--height_4--left_4--top_4'>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Мы отвечаем за развитие Единого цифрового контура на базе<br>
+                                    продуктов наших дочерних копаний. В рамках проекта <br>
+                                    осуществляется цифровизация регионального<br>
+                                    здравоохранения для выполнения федеральных показателей.
+                                </p>
+                                <p class="paragraph-description-section-content_1_2--margin-bottom_30px">
+                                    Для реализации проекта используется продуктовое решение <br>
+                                    «Единая цифровая платформа» (ЕЦП), включающая в себя<br>
+                                    следующие компоненты:
+                                </p>
+                                <ul class="ul-description-section-content_1_2">
+                                    <li class="li-description-section-content_1_2">
+                                        ЕЦП. МИС
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        ЕЦП. ЛИС
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        ЕЦП. СМП
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        ЕЦП. Радиология
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        ЕЦП. Телемедицина
+                                    </li>
+                                    <li class="li-description-section-content_1_2">
+                                        ЕЦП. Онкология
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
