--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1121,12 +1121,12 @@
     >
         <div class='section_content'>
             <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header--gray'>
+                <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>график работы</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body--gray--gap_100--center--flex-direction_row--justify-content_space-between--align-items_center--padding-top_7v'>
+                <div class='section_content_body--gap_100--center--flex-direction_row--justify-content_space-between--align-items_center--padding-top_7v'>
                     <div class="cotainer__welcome-section_1_4--gap_52--align-self_baseline">
                         <div class="cotainer__welcome-section_2_2">
                             <div class="card__welcome-section_2_2--flex-direction_column">
@@ -1219,13 +1219,13 @@
     >
         <div class="section_content">
             <div class="hasAnimation section_content_item_0" style="">
-                <div class="section_content_header--gray">
+                <div class="section_content_header">
                     <p class="section_content_header_p_left"></p>
                     <p class="section_content_header_p">Дресс-код</p>
                     <p class="section_content_header_p_right"></p>
                 </div>
-                <div class="section_content_body--gray">
-                    <div class="section_content_body--center--padding_0--gray">
+                <div class="section_content_body">
+                    <div class="section_content_body--center--padding_0">
                         <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
                             <div class="card__welcome-section--width_950--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
                                 <div class="image__welcome-section_2_0">
@@ -1271,13 +1271,13 @@
     >
         <div class="section_content">
             <div class="hasAnimation section_content_item_0">
-                <div class="section_content_header--gray">
+                <div class="section_content_header">
                     <p class="section_content_header_p_left"></p>
                     <p class="section_content_header_p">зарплата и отпуск</p>
                     <p class="section_content_header_p_right"></p>
                 </div>
-                <div class="section_content_body--gray">
-                    <div class="section_content_body--center--padding_0--gray">
+                <div class="section_content_body">
+                    <div class="section_content_body--center--padding_0">
                         <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
 
                             <div class="card__welcome-section--width_788--height_640px--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
@@ -1338,13 +1338,13 @@
     >
         <div class="section_content">
             <div class="hasAnimation section_content_item_0">
-                <div class="section_content_header--gray">
+                <div class="section_content_header">
                     <p class="section_content_header_p_left"></p>
                     <p class="section_content_header_p">корпоративные преимущества</p>
                     <p class="section_content_header_p_right"></p>
                 </div>
-                <div class="section_content_body--gray">
-                    <div class="section_content_body--center--padding_0--gray">
+                <div class="section_content_body">
+                    <div class="section_content_body--center--padding_0">
                         <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
 
                             <div class="card__welcome-section--width_788--height_475px--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
@@ -1529,12 +1529,12 @@
     >
         <div class='section_content'>
             <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header--gray'>
+                <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Программа рекомендаций</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body--gray--gap_36--center'>
+                <div class='section_content_body--gap_36--center'>
                     <div class="card__welcome-section_2_1">
                         <div class='image__welcome-section_2_0'>
                             <img src="./this/img/sections/2/1/thumb-up.svg"/>
@@ -1568,12 +1568,12 @@
     >
         <div class='section_content'>
             <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header--gray'>
+                <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Корпоративные праздники</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body--gray--gap_100--center'>
+                <div class='section_content_body--gap_100--center'>
                     <p class="paragraph--2_0">
                         Традиционно мы отмечаем 4 праздника в компании:
                     </p>
@@ -1747,13 +1747,13 @@
     >
         <div class='section_content'>
             <div class='hasAnimation section_content_item_0'>
-                <div class='section_content_header--gray'>
+                <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>ПРОПУСКНАЯ СИСТЕМА</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
 
-                <div class='section_content_body--gray--gap_100--center'>
+                <div class='section_content_body--gap_100--center'>
                     <div class="card__welcome-section_3_1--align-self_center">
                         <div class="image__welcome-section_2_2--square_158">
                             <img src="./this/img/sections/3/1/id-card 1.svg">
