--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1044,12 +1044,12 @@
                 </div>
                 <div class='section_content_body--center'>
                     <div class='content__welcome-section_1_3'>
-                        <div class='card__welcome-section_1_3'>
+                        <div class='card__welcome-section_1_3 --height_unset'>
                             <div class='section_content_card_top_03'>
                                 <img src="./this/img/sections/1/1/01.svg"/>
                             </div>
-                            <div class='section_content_card_bottom_03'>
-                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                            <div class='section_content_card_bottom_03 --height_unset'>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_12">
                                     Честность
                                 </h4>
                                 <p class="paragraph--left--font-size_24">
@@ -1059,12 +1059,12 @@
                             </div>
                         </div>
 
-                        <div class='card__welcome-section_1_3'>
+                        <div class='card__welcome-section_1_3 --height_unset'>
                             <div class='section_content_card_top_03'>
                                 <img src="./this/img/sections/1/1/02.svg"/>
                             </div>
-                            <div class='section_content_card_bottom_03'>
-                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                            <div class='section_content_card_bottom_03 --height_unset'>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_12">
                                     Эффективность
                                 </h4>
                                 <p class="paragraph--left--font-size_24">
@@ -1074,12 +1074,12 @@
                             </div>
                         </div>
 
-                        <div class='card__welcome-section_1_3'>
+                        <div class='card__welcome-section_1_3 --height_unset'>
                             <div class='section_content_card_top_03'>
                                 <img src="./this/img/sections/1/1/03.svg"/>
                             </div>
-                            <div class='section_content_card_bottom_03'>
-                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                            <div class='section_content_card_bottom_03 --height_unset'>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_12">
                                     Сотрудничество
                                 </h4>
                                 <p class="paragraph--left--font-size_24">
@@ -1088,12 +1088,12 @@
                             </div>
                         </div>
 
-                        <div class='card__welcome-section_1_3'>
+                        <div class='card__welcome-section_1_3 --height_unset'>
                             <div class='section_content_card_top_03'>
                                 <img src="./this/img/sections/1/1/04.svg"/>
                             </div>
-                            <div class='section_content_card_bottom_03'>
-                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                            <div class='section_content_card_bottom_03 --height_unset'>
+                                <h4 class="description__welcome-section_2_0--text-align--margin-bottom_12">
                                     Профессионализм
                                 </h4>
                                 <p class="paragraph--left--font-size_24">
@@ -1134,8 +1134,11 @@
                                     У нас
                                     <span class="bold">
                                         гибридный формат работы
-                                    </span>
-                                    ,это означает, что в определенные дни недели ты можешь работать вне офиса, соблюдая при этом установленный рабочий график.
+                                    </span><br>
+                                    ,это означает, что в определенные <br>
+                                    дни недели ты можешь работать<br>
+                                    вне офиса, соблюдая при этом <br>
+                                    установленный рабочий график.
                                 </p>
                             </div>
 
@@ -1143,31 +1146,39 @@
                                 <div class='image__welcome-section_2_2--square_77--margin-bottom_12'>
                                     <img src="./this/img/sections/1/4/clock-svgrepo-com 1.svg"/>
                                 </div>
-                                <p class='paragraph--left--width_402--font-size_24'>
-                                    Обычно рабочий день длится
+                                <p class='paragraph--left--width_439px--font-size_24'>
+                                    Обычно рабочий день длится<br>
                                     <span class="bold">
                                         с 10:00 до 19:00
                                     </span>
-                                    , но по согласованию со своим руководителем ты можешь начинать рабочий день в ином временном интервале.
+                                    , но по согласованию <br>
+                                    со своим руководителем ты можешь <br>
+                                    начинать рабочий день в ином <br>
+                                    временном интервале.
                                 </p>
                             </div>
                         </div>
 
                         <div class="cotainer__welcome-section_2_2">
-                            <div class="card__welcome-section_2_2--width_100--background_gray--flex-direction_column--border-radius_21--padding_44_73--gap_34--height_unset">
+                            <div class="card__welcome-section_2_2--width_100--background_gray--flex-direction_column--border-radius_21--padding_44_73--gap_34--height_327px">
                                 <div class="wrapper-example__welcome-section_1_4">
                                     <div class='image__welcome-section_2_0--square_150--margin-left_0'>
                                         <img src="./this/img/sections/1/4/speech-bubble 1.svg"/>
                                     </div>
                                     <p class="paragraph--text-align--align-self_center">
                                         <span class="link">
-                                            Я сильно опаздываю, т.к. попал в пробку, переводил бабушку через дорогу… Что мне делать?
+                                            Я сильно опаздываю, т.к. попал в пробку, переводил <br>
+                                            бабушку через дорогу… Что мне делать?
                                         </span>
                                     </p>
                                 </div>
 
-                                <p class="paragraph--text-align--font-size_24">
-                                    Позвони своему руководителю и предупреди о происшествии. Если тебе необходимо отлучиться на некоторое время в течение рабочего дня или уйти до официального окончания рабочего дня, обязательно получи на это согласие непосредственного Руководителя.
+                                <p class="paragraph--text-align--font-size_24--line-height_30px">
+                                    Позвони своему руководителю и предупреди о происшествии. <br>
+                                    Если тебе необходимо отлучиться на некоторое время в течение <br>
+                                    рабочего дня или уйти до официального окончания рабочего дня,<br>
+                                    обязательно получи на это согласие непосредственного<br>
+                                    Руководителя.
                                 </p>
                             </div>
                         </div>
@@ -1187,16 +1198,24 @@
                                 <span class="link--text-transform_initial"> 12:00 до 15:00</span>.
                             </p>
                             <p class='paragraph--left--width_100p--font-size_24--text-transform_initial'>
-                                Если ты привык к домашней кухне, в нашем офисе оборудованы кухни с холодильником, микроволновкой и кофе-машиной, которыми всегда можно воспользоваться.
+                                Если ты привык к домашней кухне, в нашем офисе <br>
+                                оборудованы кухни с холодильником,<br>
+                                микроволновкой и кофе-машиной, которыми <br>
+                                всегда можно воспользоваться.
                             </p>
                             <p class='paragraph--left--width_100p--font-size_24--text-transform_initial'>
-                                Если ты вдруг забыл свой обед дома, то не переживай! В офисе стоит вендинговый автомат «Милти»,  в котором ты всегда можешь  купить еду!
+                                Если ты вдруг забыл свой обед дома,<br>
+                                то не переживай! В офисе стоит вендинговый <br>
+                                автомат «Милти»,  в котором ты всегда можешь <br>
+                                купить еду!
                             </p>
                             <p class='paragraph--left--width_100p--font-size_24--text-transform_initial'>
-                                На 11 этаже башни есть столовая. В нее можно попасть по своему пропуску с 09:00 до 16:00.
+                                На 11 этаже башни есть столовая. В нее можно <br>
+                                попасть по своему пропуску с 09:00 до 16:00.
                             </p>
                             <p class='paragraph--left--width_100p--font-size_24--text-transform_initial'>
-                                О других кафе и ресторанах в башне ты можешь узнать
+                                О других кафе и ресторанах в башне<br>
+                                ты можешь узнать
                                 <span class="link">тут.</span>
                             </p>
                         </div>
