--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1243,29 +1243,31 @@
                 <div class="section_content_body">
                     <div class="section_content_body--center--padding_0">
                         <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
-                            <div class="card__welcome-section--width_950--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
-                                <div class="image__welcome-section_2_0">
+                            <div class="card__welcome-section--width_950--flex-grow_1--gap_55--flex-direction_column--padding_80_88--border-radius_20--background_#F5F5F5--text-transform_initial">
+                                <div class="image__welcome-section_2_0--width_125px--height_136px">
                                     <img src="./this/img/sections/1/5/cotton-polo.svg">
                                 </div>
                                 <div class="description__welcome-section_2_0">
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24--width_83%">
-                                            У нас нет жёстких правил, регламентирующих внешний вид сотрудников, однако при выборе одежды следует помнить о нормах, принятых в общественных местах.
+                                        <p class="paragraph--left--font-size_24--width_83%--text-transform_initial">
+                                            У нас нет жёстких правил, регламентирующих внешний <br>
+                                            вид сотрудников, однако при выборе одежды следует <br>
+                                            помнить о нормах, принятых в общественных местах.
                                         </p>
-                                        <p class="paragraph--left--font-size_24--margin-top_8--width_70%">
+                                        <p class="paragraph--left--font-size_24--margin-top_8--width_70%--text-transform_initial">
                                             В офисах есть шкафы, куда можно убрать верхнюю одежду вместе с уличной обувью.
                                         </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card__welcome-section--flex-direction_column--width_626--gap_27--border-radius_20--padding_80_88--background_main">
-                                <div class="image__welcome-section_2_0">
+                            <div class="card__welcome-section--flex-direction_column--width_626--gap_55--border-radius_20--padding_80_88--background_main">
+                                <div class="image__welcome-section_2_0--width_136px--height_136px">
                                     <img src="./this/img/sections/1/5/wave-blazer.svg">
                                 </div>
                                 <div class="description__welcome-section_2_0--text-align">
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24--color_white">
+                                        <p class="paragraph--left--font-size_24--color_white--text-transform_initial">
                                             Если же предстоит встреча <br> с партнёрами компании или участие <br> в деловых мероприятиях <br> и совещаниях, то официальный <br> стиль в одежде обязателен.
                                         </p>
                                     </div>
